@@ -2,7 +2,7 @@
 #
 # Copyright 2005 - 2006 Dominick Samperi
 # Copyright 2005        Uwe Ligges
-# Copyright 2008 - 2011 Dirk Eddelbuettel
+# Copyright 2008 - 2013 Dirk Eddelbuettel
 # Copyright 2011        Uwe Ligges, Brian Ripley, and Josh Ulrich
 
 ## This assumes that we can call Rscript to ask Rcpp about its locations
@@ -11,5 +11,5 @@ RCPP_LDFLAGS = $(shell "${R_HOME}/bin${R_ARCH_BIN}/Rscript.exe" -e "Rcpp:::LdFla
 
 ## The environment variable QUANTLIB_ROOT has to point to an existing build of QuantLib
 ## With R 2.12.0 and later, we also support 32 and 64 bit builds and need to differentiate
-PKG_CXXFLAGS=-I$(QUANTLIB_ROOT) -I. -I"$(BOOSTLIB)"
+PKG_CXXFLAGS=-I$(QUANTLIB_ROOT) -I../inst/include -I. -I"$(BOOSTLIB)"
 PKG_LIBS=$(RCPP_LDFLAGS) -L$(QUANTLIB_ROOT)/lib${R_ARCH} -lQuantLib
